--- a/final_project/main.ipynb
+++ b/final_project/main.ipynb
@@ -65,7 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "school001 = org.School(name=\"NIS\", address=\"Astana, Kazakhstan\", phone=\"999999\", num_stud=1000, num_teachers=50)"
+    "harvard = org.School(name=\"Harvard\", address=\"Cambridge, MA\", phone=\"(617) 495-1000\", num_stud=6755, num_teachers=253)\n",
+    "\n",
+    "yale = org.School(name=\"Yale\", address=\"New Haven, CT\", phone=\"(203) 432-4771\", num_stud=6092, num_teachers=289)\n",
+    "\n",
+    "princeton = org.School(name=\"Princeton\", address=\"Princeton, NJ\", phone=\"(609) 258-3000\", num_stud=5422, num_teachers=314)"
    ]
   },
   {
@@ -74,7 +78,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "student001.get_info()"
+    "harvard.add_teacher(name='Liam', surname='Johnson', age=35, gender='male', nationality='Bulgarian', school='Harvard', subject='Data Science')\n",
+    "\n",
+    "harvard.add_teacher(name='Benjamin', surname='Davis', age=43, gender='male', nationality='Canadian', school='Harvard', subject='Economics')\n",
+    "\n",
+    "harvard.add_teacher(name='Amelia', surname='Taylor', age=33, gender='female', nationality='Czech', school='Harvard', subject='History)\n",
+    "\n",
+    "yale.add_teacher(name='Ethan', surname='Thomas', age=50, gender='male', nationality='Danish', school='Yale', subject='Economics')\n",
+    "\n",
+    "yale.add_teacher(name='Olivia', surname='Lopez', age=50, gender='female', nationality='Spanish', school='Yale', subject='Art')\n",
+    "\n",
+    "yale.add_teacher(name='Sophia', surname='Perez', age=29, gender='female', nationality='Thai', school='Yale', subject='Precalculus')\n",
+    "\n",
+    "princeton.add_teacher(name='Oliver', surname='Harris', age=37, gender='male', nationality='Slovak', school='Princeton', subject='Biology')\n",
+    "\n",
+    "princeton.add_teacher(name='Lucas', surname='Adams', age=44, gender='male', nationality='Irish', school='Princeton', subject='Geometry')\n",
+    "\n",
+    "princeton.add_teacher(name='William', surname='Carter', age=34, gender='male', nationality='New Zealand', school='Princeton', subject='Algebra')"
    ]
   },
   {
@@ -83,7 +103,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "school001.get_info()"
+    "harvard.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yale.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "princeton.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
    ]
   },
   {
