--- a/final_project/main.ipynb
+++ b/final_project/main.ipynb
@@ -31,18 +31,6 @@
      "text": [
       "There are organizations and users modules in the package.\nThe education has imported successfully.\n"
      ]
-    },
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'users'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f7e1e4dd669c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0meducation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morganizations\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0morg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0meducation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musers\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Документы/PythonNutamy/Mitapp/final_project/education/organizations.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0musers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mSchool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maddress\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphone\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_stud\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_teachers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'users'"
-     ]
     }
    ],
    "source": [
@@ -52,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(dir(education))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +61,7 @@
     "\n",
     "harvard.add_teacher(name='Benjamin', surname='Davis', age=43, gender='male', nationality='Canadian', school='Harvard', subject='Economics')\n",
     "\n",
-    "harvard.add_teacher(name='Amelia', surname='Taylor', age=33, gender='female', nationality='Czech', school='Harvard', subject='History)\n",
+    "harvard.add_teacher(name='Amelia', surname='Taylor', age=33, gender='female', nationality='Czech', school='Harvard', subject='History')\n",
     "\n",
     "yale.add_teacher(name='Ethan', surname='Thomas', age=50, gender='male', nationality='Danish', school='Yale', subject='Economics')\n",
     "\n",
@@ -99,76 +78,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "harvard.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yale.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "princeton.add_student(name='', surname='', age='', gender='', nationality, school, subject)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h1 = user.Human(name=\"John\", surname=\"Wick\", age=35, gender=\"male\", nationality=\"USA\")\n",
+    "harvard.add_student(name='Liam', surname='Martin', age='22', gender='male', nationality='Spanish', school='Harvard', subject='Data Science')\n",
     "\n",
-    "h1.get_info()"
+    "harvard.add_student(name='William', surname='Bernard', age='20', gender='male', nationality='Czech', school='Harvard', subject='Data Science')\n",
+    "\n",
+    "harvard.add_student(name='Elli', surname='Dubois', age='19', gender='female', nationality='Spanish', school='Harvard', subject='Data Science')\n",
+    "\n",
+    "harvard.add_student(name='Lucas', surname='Thomas', age='22', gender='male', nationality='Czech', school='Harvard', subject='Data Science')\n",
+    "\n",
+    "harvard.add_student(name='Ezra', surname='Robert', age='21', gender='female', nationality='Slovak', school='Harvard', subject='Economics')\n",
+    "\n",
+    "harvard.add_student(name='Michael', surname='Richard', age='30', gender='male', nationality='Danish', school='Harvard', subject='Economics')\n",
+    "\n",
+    "harvard.add_student(name='Daniela', surname='Petit', age='18', gender='female', nationality='Spanish', school='Harvard', subject='History')\n",
+    "\n",
+    "harvard.add_student(name='Logan', surname='Scott', age='19', gender='male', nationality='Spanish', school='Harvard', subject='History')\n",
+    "\n",
+    "harvard.add_student(name='Jackson', surname='Shala', age='20', gender='male', nationality='Danish', school='Harvard', subject='History')\n",
+    "\n",
+    "harvard.add_student(name='Levi', surname='Bekim', age='21', gender='female', nationality='Slovak', school='Harvard', subject='History')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "student001.set_school('Molly')"
+    "yale.add_student(name='Hudson', surname='Miller', age='18', gender='male', nationality='Canadian', school='Yale', subject='Economics')\n",
+    "\n",
+    "yale.add_student(name='Charles', surname='Smith', age='20', gender='male', nationality='Canadian', school='Yale', subject='Economics')\n",
+    "\n",
+    "yale.add_student(name='Caleb', surname='Martinez', age='22', gender='male', nationality='Spanish', school='Yale', subject='Economics')\n",
+    "\n",
+    "yale.add_student(name='Isaiah', surname='Rodriguez', age='28', gender='male', nationality='Spanish', school='Yale', subject='')\n",
+    "\n",
+    "yale.add_student(name='Ryan', surname='Jacot', age='18', gender='male', nationality='Thai', school='Yale', subject='Economics')\n",
+    "\n",
+    "yale.add_student(name='Nataliya', surname='Habiger', age='20', gender='female', nationality='Slovak', school='Yale', subject='Art')\n",
+    "\n",
+    "yale.add_student(name='Adrian', surname='Aaberg', age='21', gender='male', nationality='Spanish', school='Yale', subject='Art')\n",
+    "\n",
+    "yale.add_student(name='Christian', surname='Smith', age='20', gender='male', nationality='Canadian', school='Yale', subject='Art')\n",
+    "\n",
+    "yale.add_student(name='Maverick', surname='Zager', age='18', gender='male', nationality='Slovak', school='Yale', subject='Precalculus')\n",
+    "\n",
+    "yale.add_student(name='Colton', surname='Faenza', age='19', gender='male', nationality='Slovak', school='Yale', subject='Precalculus')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "student001.add_subject('History')"
+    "princeton.add_student(name='Elias', surname='Garcia', age='20', gender='male', nationality='Spanish', school='Princeton', subject='Biology')\n",
+    "\n",
+    "princeton.add_student(name='Aaron', surname='Scott', age='20', gender='male', nationality='Canadian', school='Princeton', subject='Algebra')\n",
+    "\n",
+    "princeton.add_student(name='Eli', surname='Torres', age='21', gender='female', nationality='Spanish', school='Princeton', subject='Algebra')\n",
+    "\n",
+    "princeton.add_student(name='Cameron', surname='Nguyen', age='18', gender='male', nationality='Thai', school='Princeton', subject='Algebra')\n",
+    "\n",
+    "princeton.add_student(name='Ezekiel', surname='Hill', age='20', gender='male', nationality='Danish', school='Princeton', subject='Geometry')\n",
+    "\n",
+    "princeton.add_student(name='Angel', surname='Green', age='21', gender='female', nationality='Canadian', school='Princeton', subject='Geometry')\n",
+    "\n",
+    "princeton.add_student(name='Elliott', surname='Smith', age='23', gender='male', nationality='Danish', school='Princeton', subject='Algebra')\n",
+    "\n",
+    "princeton.add_student(name='Emmanuel', surname='Baker', age='35', gender='male', nationality='', school='Princeton', subject='Geometry')\n",
+    "\n",
+    "princeton.add_student(name='Augusta', surname='Mitchell', age='18', gender='female', nationality='Danish', school='Princeton', subject='Biology')\n",
+    "\n",
+    "princeton.add_student(name='Erica', surname='Phillips', age='18', gender='female', nationality='Canadian', school='Princeton', subject='Biology')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Name': 'Liam',\n",
+       " 'Surname': 'Martin',\n",
+       " 'Age': '22',\n",
+       " 'Gender': 'male',\n",
+       " 'Nationality': 'Spanish',\n",
+       " 'School': 'Harvard',\n",
+       " 'Subjects': ['D', 'a', 't', 'a', ' ', 'S', 'c', 'i', 'e', 'n', 'c', 'e']}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
-    "student001.get_info()"
+    "harvard.get_list_of_students()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "school001.get_report()"
+    "harvard.get_report_of_teachers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harvard.get_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harvard.get_report_of_students()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yale.get_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "org.School.get_info_schools()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user.Teacher.get_info_teachers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user.Student.get_info_students()"
    ]
   },
   {
@@ -274,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
