--- a/final_project/main.ipynb
+++ b/final_project/main.ipynb
@@ -22,17 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "There are organizations and users modules in the package.\nThe education has imported successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import education.organizations as org\n",
     "import education.users as user"
@@ -40,20 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "harvard = org.School(name=\"Harvard\", address=\"Cambridge, MA\", phone=\"(617) 495-1000\", num_stud=6755, num_teachers=253)\n",
+    "harvard = org.School(name=\"Harvard\", address=\"Cambridge MA\", phone=\"(617) 495-1000\", num_stud=6755, num_teachers=253)\n",
     "\n",
-    "yale = org.School(name=\"Yale\", address=\"New Haven, CT\", phone=\"(203) 432-4771\", num_stud=6092, num_teachers=289)\n",
+    "yale = org.School(name=\"Yale\", address=\"New Haven CT\", phone=\"(203) 432-4771\", num_stud=6092, num_teachers=289)\n",
     "\n",
-    "princeton = org.School(name=\"Princeton\", address=\"Princeton, NJ\", phone=\"(609) 258-3000\", num_stud=5422, num_teachers=314)"
+    "princeton = org.School(name=\"Princeton\", address=\"Princeton NJ\", phone=\"(609) 258-3000\", num_stud=5422, num_teachers=314)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,90 +151,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'Name': 'Liam',\n",
-       " 'Surname': 'Martin',\n",
-       " 'Age': '22',\n",
-       " 'Gender': 'male',\n",
-       " 'Nationality': 'Spanish',\n",
-       " 'School': 'Harvard',\n",
-       " 'Subjects': ['D', 'a', 't', 'a', ' ', 'S', 'c', 'i', 'e', 'n', 'c', 'e']}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "harvard.get_list_of_students()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "harvard.get_report_of_teachers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "harvard.get_report()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "harvard.get_report()\n",
+    "harvard.get_report_of_teachers()\n",
     "harvard.get_report_of_students()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "yale.get_report()"
+    "yale.get_report()\n",
+    "yale.get_report_of_teachers()\n",
+    "yale.get_report_of_students()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "org.School.get_info_schools()"
+    "princeton.get_report()\n",
+    "princeton.get_report_of_teachers()\n",
+    "princeton.get_report_of_students()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user.Teacher.get_info_teachers()"
+    "harvard.add_student(name='Sam', surname='Smith', age='22', gender='male', nationality='USA', school='Harvard', subject='Data Science')\n",
+    "princeton.add_student(name='Tom', surname='Brown', age='21', gender='male', nationality='New Zealand', school='Princeton', subject='Algebra')\n",
+    "yale.add_student(name='Anna', surname='Somonova', age='18', gender='female', nationality='Slovak', school='Yale', subject='Precalculus')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "harvard.list_of_students[5].add_subject('Data Science', 'History')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harvard.get_report()\n",
+    "harvard.get_report_of_teachers()\n",
+    "harvard.get_report_of_students()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yale.get_report()\n",
+    "yale.get_report_of_teachers()\n",
+    "yale.get_report_of_students()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "princeton.get_report()\n",
+    "princeton.get_report_of_teachers()\n",
+    "princeton.get_report_of_students()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "org.School.get_info_schools()\n",
+    "user.Teacher.get_info_teachers()\n",
     "user.Student.get_info_students()"
    ]
   },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
